# codex-cost

./: Cargo.toml  README.md
.github/workflows/: release.yml
docs/: refactor-invariants.md
docs/superpowers/plans/: 2026-05-23-modernize-refactor.md
src/: app.rs  cache.rs  cli.rs  lib.rs  main.rs  parser.rs  pricing.rs  search.rs  tests.rs  ui.rs  util.rs  worker.rs
src/tests/: app_tests.rs  cache_tests.rs  mod.rs  parser_tests.rs  pricing_tests.rs  search_tests.rs  ui_tests.rs  worker_tests.rs
