[package]
name = "codex-cost-tui"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Terminal UI for inspecting Codex session token usage and cost estimates"

[dependencies]
anyhow = "1.0"
crossterm = "0.27"
dirs-next = "2.0"
ratatui = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-segmentation = "=1.12.0"
walkdir = "2.5"
