[package]
name = "codex-cost"
version = "0.2.4"
edition = "2021"
rust-version = "1.75"
description = "Terminal UI for inspecting Codex session token usage and cost estimates"

[dependencies]
anyhow = "1.0"
crossterm = "0.27"
dirs-next = "2.0"
fs2 = "0.4"
fst = "0.4"
notify = "6.1"
ratatui = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
unicode-segmentation = "=1.12.0"
walkdir = "2.5"
